Theme sdmResponsive: Added .padded-row class so padding can be applied to rows. Added opacity of .7 to side-menu and main_content elements. margin-bottom set to 5px from 25px for top-menu element for mobile view. main-content element now floats right for tablet view. set min-wdith to 220px for side-bar in tablet view so element content does not overflow; @todo: Figure out how to prevent #main_content from being pushed below side-menu in tablet and desktop view;

--- a/themes/sdmResponsive/css/style-classes.css
+++ b/themes/sdmResponsive/css/style-classes.css
@@ -53,6 +53,9 @@ body {
     background: linear-gradient(to bottom right, black , #99ccff, black); /* Standard syntax (must be last) */
 }
 
+.padded-row {
+    padding: 20px;
+}
 /* Tablet Styles */
 @media only screen and (min-width: 600px) {
 
